crates/ars-components/src/layout/frame/snapshots/ars_components__layout__frame__tests__frame_iframe_default.snap
---
source: crates/ars-components/src/layout/frame.rs
expression: "snapshot_attrs(&Api::new(Props::new().src(\"https://example.com/embed\").title(\"Example embed\")).iframe_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "iframe",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "frame",
            ),
        ),
        (
            Title,
            String(
                "Example embed",
            ),
        ),
        (
            Src,
            String(
                "https://example.com/embed",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "100%",
        ),
        (
            Height,
            "auto",
        ),
        (
            Border,
            "0",
        ),
    ],
}
